<resources>
    <string name="app_name">IntroduceClubActivities</string>
    <string name="add_club_summary_save">save</string>
    <string name="add_title">Add</string>
    <string name="add_club_summary_cancel">Cancel</string>
    <string name="add_picture_button_text">add picture</string>
    <string name="club_name_input_title">club name</string>
    <string name="hint_add_club">クラブ名を入力</string>
    <string name="representative_name_input_title">representative name</string>
    <string name="hint_add_representative">代表名の入力</string>
    <string name="activity_date_title">activity date</string>
    <string name="activity_place_input_title">activity place</string>
    <string name="hint_add_activity_place">活動場所を入力</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="sunday">日</string>
    <string name="sample_club_title">sample club</string>
    <string name="tech">東北Tech道場・盛岡道場</string>
    <string name="tech_message">Tech道場とは1ヶ月に2回アプリ開発を行っているコミュニティです。みんな来てね!</string>
    <string name="activity_sunday">活動日:日曜日</string>
    <string name="activity_place_innovation_center">活動場所: 滝沢イノベーションセンター</string>
    <string name="representative_sato">代表者: 佐藤佑哉</string>
    <string name="student_number_g031t071">g031t071</string>
    <string name="club_summary_image">club__image</string>
    <string name="string_representative_id_input_title">representative id</string>
    <string name="hint_representative_id">学籍番号の入力</string>
    <string name="club_sentence_input_title">club_sentence</string>
    <string name="hint_add_sentence">説明文を入力</string>
    <string name="picture_1">picture_1</string>
</resources>
